# simson_integration_cuda

./: CMakeLists.txt  integration.cu  integration.h  main.cpp
